# BookAbode

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  fixtures.py  pyproject.toml  run.py
reader/: __init__.py  books.json  config.py  fixtures.py  forms.py  models.py  routes.py
reader/migrations/: env.py
reader/migrations/versions/: d060c1d9da7c_books_table.py
reader/static/css/: style.css
reader/templates/: base.html  best.html  book.html  create.html  edit.html  index.html  thrillers.html
