[tool.poetry]
name = "bookabode"
version = "0.1.0"
description = ""
authors = ["None"]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
colorama = "^0.4.5"
Flask = "^2.1.3"
Flask-SQLAlchemy = "^2.5.1"
Flask-WTF = "^1.0.1"
importlib-metadata = "^4.12.0"
itsdangerous = "^2.1.2"
Jinja2 = "^3.1.2"
MarkupSafe = "^2.1.1"
Pillow = "^9.2.0"
SQLAlchemy = "^1.4.39"
Werkzeug = "^2.2.1"
WTForms = "^3.0.1"
zipp = "^3.8.1"
pre-commit = "^2.20.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
